[metadata]
name = pyccmetrics
version = 0.1.0
author = Mohammad Mahdi Mohajer
# author_email = 
description = Python package for calculating code complexity metrics of the target source code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmohajer9/pyccmetrics
project_urls =
    Bug Tracker = https://github.com/mmohajer9/pyccmetrics/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src